--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -154,18 +154,20 @@ no no no.\vs{9}}
 
 \section{Introduction}
 
-Nowadays, with the strong development of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware (HW) and software (SW). The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware and which one in software, must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations may affect the overall development process, the quality, and the life-cycle of the final system.
+Nowadays, with the tight development time of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware (HW) and software (SW). The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware and which one in software, must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations might affect the overall development process, the quality, as well as the final system life-cycle.
 
 %-----------------related work came to here and was rewriten
-\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem, {\it i.e.}, to find the exact solution of a optimization problem, as presented by~\cite{Mann2007}; to use heuristics to speed up performance time, as presented by~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that using heuristics the final solution is not necessarily an optimal global solution.} 
+\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem: to find the exact solution of a optimization problem, as presented by~\cite{Mann2007}; and to use heuristics to speed up performance time, as presented by~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that using heuristics the final solution is not necessarily an optimal global solution.} 
 
-\textcolor{blue}{In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as mentioned in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as presented by~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solving, as described by~\cite{Wintersteiger2009}.} 
+\textcolor{blue}{In terms of SMT-based verification, most related studies are restricted to present the model, its modification to specific programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} use ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as mentioned in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as presented by~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solving, as described by~\cite{Wintersteiger2009}.} 
 
-\textcolor{blue}{Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as presented by~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, as described by~\cite{Bjorner2014} and~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this alternative single-core approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program.}
+\textcolor{blue}{Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as presented by~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, as described by~\cite{Bjorner2014}. Additionally, as an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this alternative single-core approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program.}
 
+%---------------------------------
 \subsection{Contributions}
+%---------------------------------
 
-\textcolor{blue}{Here, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
+\textcolor{blue}{Here, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Our experimental results are compared to ILP (integer linear programming) and GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
 
 
 %-----------------
@@ -188,7 +190,7 @@ Our experiments are based on a set of publicly available benchmarks. \textcolor{
 \subsection{Organization of this Work}
 
 This article is organized as follows: Section~\ref{background} gives a background on optimization techniques, $\nu$Z, ESBMC, and OpenMP tools. 
-Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}, and in particular, Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using $\nu$Z. In Section~\ref{Experimental-Evaluation}, we show the experimental results using several embedded systems applications. And we conclude and describe future work in Section~\ref{Conclusions}.
+Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}, and in particular, Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using $\nu$Z. In Section~\ref{Experimental-Evaluation}, we show the experimental results using several embedded systems applications. We conclude and describe future work in Section~\ref{Conclusions}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background}
