review Bounded Model Checking with ESBMC

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -229,11 +229,11 @@ In some cases, the time to find a solution using ILP is impractical. Even with t
 \label{Bounded-Model-Checking-with-ESBMC}
 %----------------------------------------------
 
-Among the recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as \textcolor{blue}{presented by}~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem, as described by~\cite{Clarke2001}. 
+Among recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for specific types of problems, it offers large performance improvements over previous approaches, as \textcolor{blue}{presented by}~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state-space explosion problem, as described by~\cite{Clarke2001}. 
 
-The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $M$, a property $\phi$, and a bound $k$, BMC unrolls the system $k$ times and translates it into a verification condition (VC) $\psi$  such that $\psi$ is satisfiable if and only if $\phi$ has a counterexample of depth $k$ or less, as defined in~\cite{Biere2009}. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, \textcolor{blue}{as presented by}~\cite{Cordeiro2012},~\cite{Armando2009},~\cite{Ganai2006}. 
+The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $M$, a property $\phi$, and a bound $k$, BMC unrolls the system $k$ times and translates it into a verification condition (VC) $\psi$  such that $\psi$ is satisfiable if and only if $\phi$ has a counterexample of depth $k$ or less, as defined in~\cite{Biere2009}. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, \textcolor{blue}{as presented by~\cite{Ganai2006},~\cite{Armando2009},~\cite{Cordeiro2012}}. 
 
-In this study, ESBMC has been used as a BMC tool to solve HW-SW partitioning problems, as mentioned in~\cite{Cordeiro2012}. 
+In this study, however, ESBMC has been used as a BMC tool to solve HW-SW partitioning problems, as mentioned in~\cite{Cordeiro2012}. 
 In particular, there are two directives in ESBMC that can be used to guide it to solve an optimization problem: ASSUME and ASSERT. The directive ASSUME is responsible for ensuring the compliance of constraints (software costs), and the directive ASSERT controls the halt condition (minimum hardware cost). Then, with some C/C++ code, it is possible to guide ESBMC to solve optimization problems.
 
 %----------------------------------------------
