review 3.1 Informal Model (or Assumptions)

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -326,7 +326,7 @@ The mathematical modeling of the HW-SW partitioning problem was taken from~\cite
 \label{Informal-Model-or-Assumptions}
 %----------------------------------------------
 
-The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is typically made by the engineer or from the project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as presented by~\cite{Teich2012}.
+The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The system's components must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the execution time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption; \textcolor{blue}{the decision is typically made by the engineer or from the project requirement.} Fourth, based on the assumption that hardware is significantly faster than software, the execution time of the components in hardware is considered to be zero. Finally, if two components are mapped to the same context, then there is no communication overhead between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this study. Hardware components do not need scheduling, because the execution time is assumed to be zero. Since there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as presented by~\cite{Teich2012}.
 
 %----------------------------------------------
 \subsection{Formal Model}
