--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -400,11 +400,11 @@ The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} an
 
 Figure~\ref{Pseudocode-describing-ESBMC} shows ESBMC pseudocode with the same constraints and conditions placed on ILP and GA. Two values must be controlled to obtain the results and to perform the optimization. One is the initial software cost, as defined in Section~\ref{Formal-Model}. The other is the halting condition (code violation) that stops the algorithm.
 
-\textcolor{blue}{Note that, as defined by the formal model, there is an index for each decision variable, indicated by letter ``i'', which ranges from $0$ to the number of nodes of the (particular) problem to be solved.} 
+\textcolor{blue}{Note that, as defined by the formal model, there is an index for each decision variable, indicated by the letter \textit{``i''}, which ranges from $0$ to the number of nodes of the (particular) problem to be solved.} 
 
 %\textcolor{red}{Conforme mencionado pelo revisor, falta definir o indice ``i''.}
 
-\textcolor{blue}{The ESBMC algorithm starts with the declarations of hardware, software, and communication costs. $S_0$ must also be defined, as the transposed incidence matrix (used in Eq.~\eqref{hw-sw-partitioning}) and the identity matrix (necessary to work with the matrices), as typically done in MATLAB.} Here, matrices $A$ and $b$ are generated. At that point, the ESBMC algorithm starts to differ from the ILP and GA presented in~\cite{Trindade2015}.
+\textcolor{blue}{The ESBMC algorithm starts with the declarations of hardware, software, and communication costs. $S_0$ must also be defined, as the transposed incidence matrix (used in Eq.~\eqref{hw-sw-partitioning}) and the identity matrix (necessary to work with the matrices), as typically done in MATLAB.} Here, matrices $A$ and $b$ are generated. At that point, the ESBMC algorithm starts to differ from ILP and GA presented in~\cite{Trindade2015}.
 
 \begin{lstlisting}[basicstyle=\footnotesize,caption={Pseudocode describing sequential ESBMC.},label={Pseudocode-describing-ESBMC},numbersep=7pt,frame=tb,captionpos=t,numberstyle=\tiny,mathescape=true]
 Initialize variables 
@@ -428,11 +428,11 @@ main {
 \end{lstlisting}
 
 \vspace{2 mm}
-\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be evaluated. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure~\cite{DeMoura2008,Brummayer2009}. If this is achieved, then the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
+\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be evaluated. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure, as described by~\cite{DeMoura2008,Brummayer2009}. If this is achieved, then the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
 
-A loop controls the cost of hardware hint, starting with zero and reaching the maximum value considering the case, where all nodes are partitioned to hardware ($H_{max}$). To every test performed, the hardware hint is compared to the feasible solution. This is accomplished by an \textit{ASSERT} statement at the end of the algorithm, a predicate that controls the halt condition (a \textit{true-false} statement). If the predicate is \textit{FALSE}, then the optimization is finished, {\it i.e.}, the solution is found. 
+\textcolor{blue}{A loop controls the cost of hardware hint, starting with zero and reaching the maximum value, considering the case where all nodes are partitioned to hardware (which is represented by $H_{max}$)}. To every performed test, the hardware hint is compared to the feasible solution. This is accomplished by an \textit{ASSERT} statement at the end of the algorithm; a predicate that controls the halt condition (a \textit{true-false} statement). If the predicate is \textit{false}, then the optimization is concluded, {\it i.e.}, the solution is found. 
 
-The \textit{ASSERT} statement tests the objective function, {\it i.e.}, the hardware cost, and will stop if the hardware cost found is lower than or equal to the optimal solution. However, if \textit{ASSERT} returns a \textit{true} condition, {\it i.e.}, the hardware cost is higher than the optimal solution, then the model-checking algorithm restarts and a new possible solution is generated and tested until the \textit{ASSERT} generates a \textit{false} condition. When the \textit{false} condition happens at verification-time, the execution code is aborted and ESBMC presents the counterexample that caused the condition to be broken. That is the point in which the solution is presented (minimum HW cost).
+The \textit{ASSERT} statement tests the objective function, {\it i.e.}, the hardware cost, and will stop if the hardware cost found is lower than or equal to the optimal solution. However, if \textit{ASSERT} returns a \textit{true} condition, {\it i.e.}, the hardware cost is higher than the optimal solution, then the model-checking algorithm restarts and a new possible solution is generated and tested until the \textit{ASSERT} generates a \textit{false} condition. When the \textit{false} condition occurs, the verification is concluded and ESBMC presents the counterexample that caused the condition to be broken. That is the point in which the solution is presented (minimum HW cost).
 
 \textcolor{blue}{In the ESBMC algorithm, there is no need for adding slack variables in Eq.~\eqref{hw-sw-partitioning}, which reduces the number of variables to be solved if compared to ILP and GA.}
 
