review 4.4 Multi-core ESBMC with OpenMP using Workers (ESBMC-PS)

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -468,7 +468,7 @@ The previous parallelization is implemented by continuously forking ESBMC instan
 	\label{ESBMC-Multi-core-Optimized-Sequential-Approach}
 \end{figure}
 
-\textcolor{blue}{In contrast to ESBMC-SS, where a new block of threads will be executed only if all threads in the previous execution were concluded, ESBMC-PS aims at removing the idle time from the parallel loops, by creating workers inside threads so that the next step is immediately executed if there is a processing core available, as shown in Fig.~\ref{ESBMC-Multi-core-Optimized-Sequential-Approach}. Note that there is no communication among workers, but each worker notifies the controller if a violation is found for its TipH value}.
+\textcolor{blue}{In contrast to ESBMC-SS, where a new block of threads will be executed only if all threads in the previous execution were concluded, ESBMC-PS aims at removing the idle time from the parallel loops, by creating workers inside threads so that the next step is immediately executed, if there is a processing core available, as shown in Fig.~\ref{ESBMC-Multi-core-Optimized-Sequential-Approach}. Note that there is no communication among workers, but each worker notifies the controller if a violation is found for its $TipH$ value.}
 
 %Similar to ESBMC-SS, the decision variables are instantiated by the SMT solver to check the verification conditions produced by ESBMC. Additionally, each worker is instantiated using a different value for TipH, which checks once for a possible solution. There is no communication among workers; however, each worker is responsible for sending a message to the controller if a violation is found for the TipH value during its execution. The ESBMC-SS instantiates a block of threads based on the number of available cores in the CPU. A new block will be executed only if all threads in the previous execution were concluded.
 
